[package]
name = "handlebars_sprig"
version = "0.1.0"
edition = "2021"
description = "handlebar template function helpers"
license-file = "LICENSE.txt"

[dependencies]
handlebars = {version = "4.1", features = ["dir_source", "script_helper"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
